# MyMoney

./: .env.example  .gitignore  .vercelignore  README.md  app.js  index.html  manifest.webmanifest  pyproject.toml  requirements.txt  styles.css  vercel.json
api/: config.py  demo_data.py  main.py
api/services/: chat.py  ocr.py
public/: app.js  index.html  manifest.webmanifest  styles.css
tests/: test_api.py
